tests/fixtures/invalid/pow_no_args.py
# pow() requires at least 2 arguments
x = pow()
